<resources>
    <string name="app_name">Battle Quiz</string>
    <string name="action_settings">Settings</string>
    <string name="take_quiz">Take Quiz</string>
    <string name="create_quiz">Create Quiz</string>
    <string name="enter_quiz_name">Enter Quiz Name</string>
    <string name="quiz_name">Quiz Name:</string>
    <string name="add_question">Add Question</string>
    <string name="finish_quiz">Finish Quiz</string>
    <string name="enter_question_text">Enter question text</string>
    <string name="enter_choice_1">Enter choice 1</string>
    <string name="enter_choice_2">Enter choice 2</string>
    <string name="save_question">Save Question</string>
    <string name="enter_choice_3">Enter choice 3</string>
    <string name="enter_choice_4">Enter choice 4</string>
    <string name="correct_answer">Correct Answer</string>
    <string name="title_activity_take_quiz">TakeQuizActivity</string>
    <string name="title_activity_quiz_complete">QuizCompleteActivity</string>
    <string name="start_game">Start Game</string>
    <string name="edit_quiz">Edit Quiz</string>
    <string name="title_activity_post_quiz">PostQuizActivity</string>
    <string name="save_score">Save Score</string>
    <string name="enter_name">Enter name</string>
    <string name="score">Score:</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="title_activity_login">"Login "</string>
    <string name="title_activity_sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_out">Sign Out</string>
    <string name="your_quizzes">Your Quizzes:</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="password_2">password</string>
    <string name="enter_email">Enter Email</string>
    <string name="verify_password">Verify Password</string>
    <string name="share_score">Share score</string>
    <string name="questions">Questions:</string>
</resources>
