<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".HomeScreenActivity"
    tools:showIn="@layout/home_screen_activity">

    <Button
        android:id="@+id/take_quiz_but"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/take_quiz"
        app:layout_constraintStart_toStartOf="@+id/quiz_name_input_home"
        app:layout_constraintTop_toBottomOf="@+id/quiz_name_input_home" />

    <Button
        android:id="@+id/create_quiz_but"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/create_quiz"
        app:layout_constraintEnd_toEndOf="@+id/quiz_name_input_home"
        app:layout_constraintTop_toBottomOf="@+id/leaderboard_but" />

    <EditText
        android:id="@+id/quiz_name_input_home"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="8dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/enter_quiz_name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/edit_quiz_but"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/edit_quiz"
        app:layout_constraintStart_toStartOf="@+id/quiz_name_input_home"
        app:layout_constraintTop_toBottomOf="@+id/take_quiz_but" />

    <Button
        android:id="@+id/leaderboard_but"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/leaderboard"
        app:layout_constraintEnd_toEndOf="@+id/quiz_name_input_home"
        app:layout_constraintTop_toTopOf="@+id/take_quiz_but" />

    <Button
        android:id="@+id/homescreen_login_but"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/homescreen_signup_but"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/sign_up"
        app:layout_constraintBottom_toTopOf="@+id/homescreen_login_but"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/signout_but"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/sign_out"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <Spinner
        android:id="@+id/quiz_spinner"
        style="@style/Widget.AppCompat.Spinner.Underlined"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/your_quizzes_label" />

    <TextView
        android:id="@+id/your_quizzes_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:text="@string/your_quizzes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_quiz_but" />

</android.support.constraint.ConstraintLayout>