<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".PostGameActivity"
    tools:showIn="@layout/post_game_activity">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/leadboard_post_game"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="64dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_input" />

    <Button
        android:id="@+id/save_score_but"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/save_score"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/name_input"
        app:layout_constraintTop_toTopOf="@+id/name_input" />

    <EditText
        android:id="@+id/name_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/enter_name"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/score_view" />

    <TextView
        android:id="@+id/score_label"
        android:layout_width="62dp"
        android:layout_height="32dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/score"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/score_view"
        android:layout_width="139dp"
        android:layout_height="82dp"
        app:layout_constraintEnd_toEndOf="@+id/score_label"
        app:layout_constraintStart_toStartOf="@+id/score_label"
        app:layout_constraintTop_toBottomOf="@+id/score_label" />

    <Button
        android:id="@+id/share_score_but"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Share score"
        app:layout_constraintEnd_toEndOf="@+id/save_score_but"
        app:layout_constraintStart_toStartOf="@+id/save_score_but"
        app:layout_constraintTop_toBottomOf="@+id/save_score_but" />
</android.support.constraint.ConstraintLayout>